compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.kt
// a.b.c.JvmPackageNameKt
// WITH_STDLIB
@file:JvmPackageName("a.b.c")
package p

fun f() {

}

// FIR_COMPARISON
// SKIP_IDE_TEST